docker-compose reads variables from .env

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,15 @@
 version: '3.8'
-
 services:
   api-service:
     build: .
-    # Mounts the current directory to /app inside the container for live-reloading
     volumes:
       - .:/app
-      # Securely mount the GCP key from host to the container
-      - ./parcelas-api-ba83a3b79c29.json:/secrets/gcp-key.json:ro
+      - ${GCP_KEY_PATH}:/secrets/gcp-key.json:ro
     environment:
       - GOOGLE_APPLICATION_CREDENTIALS=/secrets/gcp-key.json
-      - COG_STORAGE_URL=gs://parcelas-wrs2
+      - COG_STORAGE_URL=${COG_STORAGE_URL}
       - PYTHONAPP=/app
-      - ALLOWED_ORIGINS=http://localhost:3001
-      # Ensures Python logs show up immediately in terminal
+      - ALLOWED_ORIGINS=${ALLOWED_ORIGINS}
       - PYTHONUNBUFFERED=1
     ports:
       - "8080:8080"
