--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,6 @@ planetary-computer==1.0.0
 
 geopandas==1.1.2
 xarray==2025.11.0
-rioxarray==0.21.0
-rasterio==1.5.0
-dask==2026.1.2
+rioxarray>=0.19.0
+rasterio>=1.4.0
+dask>=2026.1.0
